# intent_recognition

./: .cproject  .project  CMakeLists.txt  intent_recognizer.cpp  intent_recognizer.h
files/: cities.txt  weather.txt
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  intent_recognizerTest.cpp
test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  intent_recognizerTest
